--- a/modulo-css-basico/06-cores/index.html
+++ b/modulo-css-basico/06-cores/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <h1>Cores CSS</h1>
-    <h2>Subtitulo 1</h2>
-    <h2>Subtitulo 2</h2>
-    <h2>Subtitulo 3</h2>
-    <h2>Subtitulo 4</h2>
+    <h2 style="color: red;">Subtitulo 1</h2>
+    <h2 style="color: rgb(255,0,0);">Subtitulo 2</h2>
+    <h2 style="color: rgba(255,0,0,0.5);">Subtitulo 3</h2>
+    <h2 style="color: #ff0000;">Subtitulo 4</h2>
+    <h2 style="color: hsl(0, 100%, 50%);">Subtitulo 5</h2>
+    <h2 style="background-image: linear-gradient( to right, red, blue);">Subtitulo 5</h2>
+
 </body>
 </html>
