--- a/modulo-css-basico/12-IDs-e-CLASSES/index.html
+++ b/modulo-css-basico/12-IDs-e-CLASSES/index.html
@@ -10,10 +10,10 @@
 <body>
     <h1>Ids e Classes</h1>
     <h2>Playstation 5</h2>
-    <p id="descricao-game">Um baita videogame</p>
+    <p class="descricao-produto promocao">Um baita videogame</p>
     <p>R$ 5.000,00</p>
     <h2 >PC com led Top</h2>
-    <p id="descricao-pc">Um pc para ninguém colocar defeito.</p>
+    <p class="descricao-produto">Um pc para ninguém colocar defeito.</p>
     <p>R$ 15.000,00</p>
 </body>
 </html>
