--- a/Exercícios/index.html
+++ b/Exercícios/index.html
@@ -9,21 +9,21 @@
 </head>
 <body>
     <header>
-        <h1>Lista de alimentos "Saudáveis"</h1>
-        <h2>Lista de Mercado</h2>
+        <h1>Lista de Mercado</h1>
+        <h2>Lista de alimentos "Saudáveis"</h2>
     </header>
     <main>
         <ul>
-            <li>Pão de Queijo - 1 pacote <span class="valor">R$ 6,00</span> </li>
-            <li>Tapioca - 2 pacotes <span class="valor">R$4,50</span> </li>
-            <li>Batata Doce - 1 kg <span class="valor">R$4,00</span> </li>
-            <li>Aveia - 1 caixa <span class="valor">R$5,00</span> </li>
-            <li>Beringela - 0,5Kg <span class="valor">R$3,00</span> </li>
-            <li>Banana - 1 Duzia <span class="valor">R$5,50</span> </li>
-            <li>Focão para Cuscuz - 1 pacote <span class="valor">R$6,00</span> </li>
-            <li>Yorgute - 1 litro <span class="valor">R$8,00</span> </li>
-            <li id="valor-total">Valor Total	<span class="valor">R$45,00</span> </li>
+            <li>Pão de Queijo - 1 pacote - <strong>R$6,00</strong> </li>
+            <li>Tapioca - 2 pacotes - <strong>R$4,50</strong> </li>
+            <li>Batata Doce - 1 kg - <strong>R$4,00</strong> </li>
+            <li>Aveia - 1 caixa - <strong>R$5,00</strong> </li>
+            <li>Beringela - 0,5Kg - <strong>R$3,00</strong> </li>
+            <li>Banana - 1 Duzia - <strong>R$5,50</strong> </li>
+            <li>Focão para Cuscuz - 1 pacote - <strong>R$6,00</strong> </li>
+            <li>Yorgute - 1 litro - <strong>R$8,00</strong> </li>
         </ul>
+        <P id="valor-total">Valor Total	<strong>R$45,00</strong></P> 
     </main>
-</body>- 
+</body>
 </html>
