--- a/Exercícios/ex02/index.html
+++ b/Exercícios/ex02/index.html
@@ -11,13 +11,13 @@
     <main>
             <H1>Olá Pessoal Dev.</H1>
             <p class="topico">Você conhece o maior site de busca do mundo?</p>
-            <p>É ele mesmo o Google. <a href="https://www.google.com.br/" target="_blank">Clique aqui</a> que você será direcionado para lá para você fazer varias pesquisas.</p>
-            <p class="topico">Outro site muito legal é <a href="https://placeholder.com/" target="_blank">Placeholder</a></p>
+            <p>É ele mesmo o Google. <a href="https://www.google.com.br/" target="_blank"><img src="http://placekitten.com/50/50" alt="Gato curioso"></a> Clique no gato curioso que você será direcionado para lá para você fazer várias pesquisas.</p>
+            <p class="topico">Outro site muito legal é <a id="link" href="https://placeholder.com/" target="_blank">Placeholder</a></p>
             <p>Lá você consegue vários modelos de marcadores de posição como esses abiaxo:</p>
             <div>
         
-                    <img src="https://via.placeholder.com/150 " alt="placeholder150">
-                    <img src="https://via.placeholder.com/150/0000FF/808080" alt="placeholder150azul">
+                    <img src="https://via.placeholder.com/100 " alt="placeholder150">
+                    <img src="https://via.placeholder.com/200x300/0000FF/808080" alt="placeholder150azul">
                     <img src="https://via.placeholder.com/300" alt="placeholder300">
                     <img src="https://via.placeholder.com/650x500/FF99F8" alt="placeholder650x500">
             </div>
