--- a/modulo-css-intermediario/01-especificidade-efeito-cascata/index.html
+++ b/modulo-css-intermediario/01-especificidade-efeito-cascata/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Especificidade e efeito Cascata</title>
+    <link rel="stylesheet" href="style.css">
+
+    <!-- <style>
+        .container-cascata{background-color: blueviolet;}
+    </style> -->
 </head>
 <body>
-    <h1>Efeito Cascata</h1>
+    <!-- <h1>Efeito Cascata</h1>
+    <div class="container-cascata" style="background-color: red;">
+        <h2>Container Cascata</h2>
+    </div> -->
+
+    <h1>Especificidade</h1>
+    <div class="container-especifidade">
+        <h2>Container Especificidade</h2>
+        <p class="text" id="text-para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate perferendis, nesciunt ratione pariatur autem labore in, quae atque minima eligendi soluta rerum odio ducimus id aliquam aliquid odit earum aut. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum obcaecati sapiente libero. Mollitia totam, fugit nihil, nemo culpa neque repellat placeat in, expedita dolorum vel necessitatibus quisquam corporis consectetur corrupti.</p>
+    </div>
 </body>
 </html>
