--- a/modulo-css-intermediario/02-estilos-texto/index.html
+++ b/modulo-css-intermediario/02-estilos-texto/index.html
@@ -43,6 +43,14 @@
     <h4>Texto Decorado - none</h4>
     <p class="sem-text-decoration fundo-decoration">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, maxime porro. Possimus numquam tempora reprehenderit ratione facilis! Deleniti aut temporibus quam quidem, ex voluptas nisi, explicabo at nostrum reprehenderit omnis?</p>
     
-    6-37 min video 2
+    <h4>Atura entre linhas - line height</h4>
+    <p class="altura-entre-linhas fundo">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique facere placeat quisquam, repellendus ipsam accusamus, eveniet sunt dicta veniam harum necessitatibus obcaecati odio, rerum molestias animi totam. Vitae, dolor beatae!
+    </p>
+
+    <h4>Sombra de Texto - text shadow</h4>
+    <p class="sombra-de-texto">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique facere placeat quisquam, repellendus ipsam accusamus, eveniet sunt dicta veniam harum necessitatibus obcaecati odio, rerum molestias animi totam. Vitae, dolor beatae!
+    </p>
 </body>
 </html>
