--- a/modulo-css-avançado-1/02-pseudo-elementos/index.html
+++ b/modulo-css-avançado-1/02-pseudo-elementos/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-    <!-- <h1>Pseudo-Elementos</h1>
+    <h1>Pseudo-Elementos</h1>
 
     <h2>First Letter</h2>
     <p class="primeiro-caracter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius vel earum dicta ut laborum quas dolorum ab ipsum fuga harum velit suscipit iste, provident porro animi. Vero ab iure neque.</p>
@@ -22,9 +22,9 @@
         <li>Item 2</li>
         <li>Item 3</li>
         <li>Item 4</li>
-    </ul> -->
+    </ul>
 
-    <h2>Before</h2>
+    <h2>Before e After</h2>
 
     <h2 class="before">Meu título com before</h2>
 
