--- a/modulo-css-avançado-2/01-flex-container-1/index.html
+++ b/modulo-css-avançado-2/01-flex-container-1/index.html
@@ -14,5 +14,31 @@
         <div class="item">2</div>
         <div class="item">3</div>
     </div>
+
+    <h2>Wrap</h2>
+    <div class="container wrap">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+        <div class="item">6</div>
+        <div class="item">7</div>
+        <div class="item">8</div>
+        <div class="item">9</div>
+    </div>
+
+    <h2>Flow</h2>
+    <div class="container flow">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+        <div class="item">6</div>
+        <div class="item">7</div>
+        <div class="item">8</div>
+        <div class="item">9</div>
+    </div>
 </body>
 </html>
