--- a/modulo-css-avançado/07-flex-container-2/align-content.html
+++ b/modulo-css-avançado/07-flex-container-2/align-content.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flex Container: Direction - wrap -flow</title>
+    <title>Flex Container - Align Content</title>
     <link rel="stylesheet" href="globals.css">
-    <link rel="stylesheet" href="justify-content.css">
+    <link rel="stylesheet" href="align-itens.css">
 </head>
 <body>
-    <h1>Felx Container - Justify content</h1>
+    <h1>Flex Container - Align Itens</h1>
 
     <section>
         <h2>Flex-start</h2>
@@ -39,8 +39,8 @@
     </section>
 
     <section>
-        <h2>Space-Between</h2>
-        <div class="container space-between">
+        <h2>Stretch</h2>
+        <div class="container stretch">
             <div class="item item1">1</div>
             <div class="item item2">2</div>
             <div class="item item3">3</div>
@@ -48,17 +48,8 @@
     </section>
 
   <section>
-        <h2>Space-Around</h2>
-        <div class="container space-around">
-            <div class="item item1">1</div>
-            <div class="item item2">2</div>
-            <div class="item item3">3</div>
-        </div>
-    </section>
-
-    <section>
-        <h2>Space-Evenly</h2>
-        <div class="container space-evenly">
+        <h2>Baseline</h2>
+        <div class="container baseline">
             <div class="item item1">1</div>
             <div class="item item2">2</div>
             <div class="item item3">3</div>
