--- a/modulo-css-avançado/07-flex-container-2/align-content.html
+++ b/modulo-css-avançado/07-flex-container-2/align-content.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Container - Align Content</title>
     <link rel="stylesheet" href="globals.css">
-    <link rel="stylesheet" href="align-itens.css">
+    <link rel="stylesheet" href="align-content.css">
 </head>
 <body>
-    <h1>Flex Container - Align Itens</h1>
+    <h1>Flex Container - Align Content</h1>
 
     <section>
         <h2>Flex-start</h2>
@@ -48,11 +48,38 @@
     </section>
 
   <section>
-        <h2>Baseline</h2>
-        <div class="container baseline">
-            <div class="item item1">1</div>
-            <div class="item item2">2</div>
+        <h2>Space-Between</h2>
+        <div class="container space-between">
+            <div class="item item1">Lorem ipsum dolor </div>
+            <div class="item item2">Lorem, ipsum </div>
             <div class="item item3">3</div>
+            <div class="item item4">4</div>
+            <div class="item item5">5</div>
+            <div class="item item6">6</div>
+        </div>
+    </section>
+
+    <section>
+        <h2>Space-Around</h2>
+        <div class="container space-around">
+            <div class="item item1">Lorem ipsum dolor </div>
+            <div class="item item2">Lorem, ipsum </div>
+            <div class="item item3">3</div>
+            <div class="item item4">4</div>
+            <div class="item item5">5</div>
+            <div class="item item6">6</div>
+        </div>
+    </section>
+
+    <section>
+        <h2>Space-Evenly</h2>
+        <div class="container space-evenly">
+            <div class="item item1">Lorem ipsum dolor </div>
+            <div class="item item2">Lorem, ipsum </div>
+            <div class="item item3">3</div>
+            <div class="item item4">4</div>
+            <div class="item item5">5</div>
+            <div class="item item6">6</div>
         </div>
     </section>
 </body>
