Correção responsivo Desktop

--- a/Exercícios/ex04/index.html
+++ b/Exercícios/ex04/index.html
@@ -11,8 +11,8 @@
     <header>
         <section class="menu">
             <div class="logo">
-                <img src="image/logo.png" alt="logo">
-                <strong class="text-logo">Thebank</strong>
+                
+                <strong class="text-logo"><img src="image/logo.png" alt="logo">Thebank</strong>
             </div>
             <nav>
                 <ul class="link-para-outras-paginas">
