--- a/Exercícios/ex04/index.html
+++ b/Exercícios/ex04/index.html
@@ -6,25 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout Menu</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
-    <header>
-        <section class="menu">
-            <div class="logo">
-                
-                <strong class="text-logo"><img src="image/logo.png" alt="logo">Thebank</strong>
-            </div>
-            <nav>
-                <ul class="link-para-outras-paginas">
-                    <li><a href="#" class="home">Home</a></li>
-                    <li><a href="#" class="sobre">Sobre</a></li>
-                    <li><a href="#" class="contato">Contato</a></li>
-                    <li><a href="#" class="blog">Blog</a></li>
-                    <li><a href="#" class="carreira">Carreira</a></li>
-                    <li><a href="#" class="cadastre-se">Cadraste-se</a></li>
-                </ul>
-            </nav>
-        </section>
+    <header class="menu">
+        <a href="#" class="logo">
+            <strong class="text-logo"><img src="image/logo.png" alt="logo">Thebank</strong>
+        </a>
+        <nav>
+            <ul class="link-para-outras-paginas">
+                <li><a href="#" class="home">Home</a></li>
+                <li><a href="#" class="sobre">Sobre</a></li>
+                <li><a href="#" class="contato">Contato</a></li>
+                <li><a href="#" class="blog">Blog</a></li>
+                <li><a href="#" class="carreira">Carreira</a></li>
+                <li><a href="#" class="cadastre-se">Cadraste-se</a></li>
+            </ul>
+        </nav>
+
     </header>
     <main>
 
