--- a/Exercícios/ex05/index.html
+++ b/Exercícios/ex05/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,10 +10,10 @@
 </head>
 <body>
     <section class="mural">
-        <img src="imagens/rome.png" alt="Roma">
-        <img src="imagens/boat.png" alt="Barco">
-        <img src="imagens/sand-and-sea.png" alt="Mar">
-        <img src="imagens/starry-night.png" alt="Noite">
+        <img src="imagens/rome.png" alt="Roma" class="quadro">
+        <img src="imagens/boat.png" alt="Barco" class="quadro">
+        <img src="imagens/sand-and-sea.png" alt="Mar" class="quadro">
+        <img src="imagens/starry-night.png" alt="Noite" class="quadro">
     </section>
 </body>
 </html>
