--- a/Exercícios/ex05/index.html
+++ b/Exercícios/ex05/index.html
@@ -9,11 +9,30 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section class="mural">
-        <img src="imagens/rome.png" alt="Roma" class="quadro">
-        <img src="imagens/boat.png" alt="Barco" class="quadro">
-        <img src="imagens/sand-and-sea.png" alt="Mar" class="quadro">
-        <img src="imagens/starry-night.png" alt="Noite" class="quadro">
-    </section>
+    <main>
+        <section class="mural">
+            <picture class="quadro">
+                <img src="imagens/rome.png" alt="Roma">
+                <h2>Rome</h2>
+                <h3>Micheangelo</h3>
+            </picture>
+            <picture class="quadro">
+                <img src="imagens/boat.png" alt="Barco">
+                <h2>Boat at Sea</h2>
+                <h3>Vincent Van Gogh</h3>
+            </picture>
+            <picture class="quadro">
+                <img src="imagens/sand-and-sea.png" alt="Mar">
+                <h2>Sand and Sea</h2>
+                <h3>Da Vinci</h3>
+            </picture>
+            <picture class="quadro">
+                <img src="imagens/starry-night.png" alt="Noite">
+                <h2>Starry Night</h2>
+                <h3>Vincent Van Gogh</h3>
+            </picture>
+            
+        </section>
+    </main>
 </body>
 </html>
