--- a/modulo-css-avançado/12-grid-layout/index.html
+++ b/modulo-css-avançado/12-grid-layout/index.html
@@ -16,7 +16,7 @@
         <div>Célula 4</div>
         <div>Célula 5</div>
         <div>Célula 6</div>
-        <div>Célula </div>
+        <div>Célula 7</div>
     </div>
 </body>
 </html>
