--- a/modulo-css-avançado/12-grid-layout/minmax.html
+++ b/modulo-css-avançado/12-grid-layout/minmax.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minmax</title>
+    <link rel="stylesheet" href="minmax.css">
 </head>
 <body>
     <h1>Minmax</h1>
-    <div>
-        Ajusta o conteúdo no minimo em 100px <br> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-    </div>
-    <div>
-        Ajusta o conteúdo no minimo em 100px <br> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+
+    <div class="container">
+        <div>
+            Ajusta o conteúdo no minimo em 100px <br> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </div>
+        <div>
+            Ajusta o conteúdo no máximo em 200px <br> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </div>
+        <div>Ajusta o conteúdo no máximo em 200px <br> </div>
+        <div>maximo 1fr <br> </div>
+        <div>célula 5</div>
+        <div>célula 6</div>
+        <div>célula 7</div>
+        <div>célula 8</div>
     </div>
 </body>
 </html>
