--- a/Exercícios/ex06/index.html
+++ b/Exercícios/ex06/index.html
@@ -5,52 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Copia Youtube</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;1,300;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main>
-        <section class="destaque">
+    <main class="container">
+        <section class="video-destaque">
             <img src="https://via.placeholder.com/537x217" alt="video-principal">
-            <div class="informacao-video-principal">
+            <div class="informacao-video-destaque">
                 <h2>Título do vídeo de destaque</h2>
                 <h3> 18 mil Visualizações</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus consequatur animi ipsa. Reiciendis, quo consequatur. Sit laboriosam unde optio nobis provident porro. Alias, in sunt nesciunt deserunt atque ipsam distinctio.</p>
             </div>
         </section>
+        <aside class="propaganda">
+            <img src="https://via.placeholder.com/270x56?text=Propaganda" alt="propaganda">
+        </aside>
         <section class="menu-de-navegar">
-            <aside>
-                <img src="https://via.placeholder.com/468x60?text=Propaganda" alt="propaganda">
-            </aside>
-            <article>
-                <div class="video">
-                    <img src="https://via.placeholder.com/101x71" alt="proóximos-videos">
-                    <div class="informacao-proximo-video">
-                        <h2>Um título de vídeo grnade</h2>
-                        <p>Roberto Dias</p>
-                        <p>23 mil visualizações <br> há 3 semanas</p>
-                    </div>
+            <div class="videos-sugeridos">
+                <img src="https://via.placeholder.com/101x71" alt="próximos-videos">
+                <div class="informacao-videos-sugeridos">
+                    <h2>Um título de vídeo grande</h2>
+                    <p>Roberto Dias</p>
+                    <p>23 mil visualizações</p>
+                    <p> há 3 semanas</p>
                 </div>
-                <div class="video">
-                    <img src="https://via.placeholder.com/101x71" alt="proóximos-videos">
-                    <div class="informacao-proximo-video">
-                        <h2>Um título de vídeo grnade</h2>
-                        <p>Roberto Dias</p>
-                        <p>23 mil visualizações <br> há 3 semanas</p>
-                    </div>
+            </div>
+            <div class="videos-sugeridos">
+                <img src="https://via.placeholder.com/101x71" alt="próximos-videos">
+                <div class="informacao-videos-sugeridos">
+                    <h2>Um título de vídeo grande</h2>
+                    <p>Roberto Dias</p>
+                    <p>23 mil visualizações</p>
+                    <p> há 3 semanas</p>
                 </div>
-                <div class="video">
-                    <img src="https://via.placeholder.com/101x71" alt="proóximos-videos">
-                    <div class="informacao-proximo-video">
-                        <h2>Um título de vídeo grnade</h2>
-                        <p>Roberto Dias</p>
-                        <p>23 mil visualizações <br> há 3 semanas</p>
-                    </div>
+            </div>
+            <div class="videos-sugeridos">
+                <img src="https://via.placeholder.com/101x71" alt="próximos-videos">
+                <div class="informacao-videos-sugeridos">
+                    <h2>Um título de vídeo grande</h2>
+                    <p>Roberto Dias</p>
+                    <p>23 mil visualizações</p>
+                    <p> há 3 semanas</p>
                 </div>
-            </article>
+            </div>
         </section>
     </main>
 
