--- a/whorkshop-nft/index.html
+++ b/whorkshop-nft/index.html
@@ -5,33 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="NFT preview card component">
+    <link rel="shortcut icon" href="src/image/favicon-32x32.png" type="image/x-icon">
     <title>NFT preview card component</title>
-    <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/variables.css">
-    <link rel="shortcut icon" href="src/image/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <main class="container">
-        <section class="card">
-            <a href="#">
-                <img src="src/image/image-equilibrium.jpg" alt="equilibrium">
+        <section class="nft-card">
+            <a href="#" class="nft-image-link">
+                <img src="src/image/image-equilibrium.jpg" alt="Equilibrium NFT image" class="nft-image">
             </a>
-            <div class="informations">
+            <a href="#">
                 <h2 class="tittle">Equilibrium #3429</h2>
-                <p>Our Equilibrium collection promotes balance and calm.</p>
-                <div class="value-and-date">
-                    <strong><img src="src/image/icon-ethereum.svg" alt="ethereum-icon">0,041 ETH</strong>
-                    <p><img src="src/image/icon-clock.svg" alt="clock-icon"> 3 days left</p>
-                </div>
-                <div class="author">
-                    <img src="src/image/image-avatar.png" alt="">
-                    <p>Creation of <a href="#">Jules Wyern</a></p>
-                </div>
+            </a>
+            <p class="about">Our Equilibrium collection promotes balance and calm.</p>
+            <div class="value-and-date">
+                <p class="price"> 0,041 ETH</p>
+                <p class="date"> 3 days left</p>
+            </div>
+            <div class="author">
+                <img src="src/image/image-avatar.png" alt="">
+                <p class="text">Creation of <a href="#" class="name">Jules Wyern</a></p>
             </div>
         </section>
-
     </main>
-
 </body>
 </html>
