--- a/Exercícios/ex04/index.html
+++ b/Exercícios/ex04/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="menu">
         <a href="#" class="logo">
-            <strong class="text-logo"><img src="image/logo.png" alt="logo">Thebank</strong>
+            <strong class="texto-logo"><img src="image/logo.png" alt="logo">Thebank</strong>
         </a>
         <nav>
             <ul class="link-para-outras-paginas">
