--- a/Exercícios/ex06/index.html
+++ b/Exercícios/ex06/index.html
@@ -14,7 +14,7 @@
 <body>
     <main class="container">
         <section class="video-destaque">
-            <img src="https://via.placeholder.com/537x217" alt="video-principal">
+            <img src="http://placekitten.com/537/217" alt="video-principal">
             <div class="informacao-video-destaque">
                 <h2>Título do vídeo de destaque</h2>
                 <h3> 18 mil Visualizações</h3>
@@ -22,11 +22,11 @@
             </div>
         </section>
         <aside class="propaganda">
-            <img src="https://via.placeholder.com/270x56?text=Propaganda" alt="propaganda">
+            <img src="http://placekitten.com/270/56" alt="propaganda">
         </aside>
         <section class="menu-de-navegar">
             <div class="videos-sugeridos">
-                <img src="https://via.placeholder.com/101x71" alt="próximos-videos">
+                <img src="http://placekitten.com/101/71" alt="próximos-videos">
                 <div class="informacao-videos-sugeridos">
                     <h2>Um título de vídeo grande</h2>
                     <p>Roberto Dias</p>
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="videos-sugeridos">
-                <img src="https://via.placeholder.com/101x71" alt="próximos-videos">
+                <img src="http://placekitten.com/101/71" alt="próximos-videos">
                 <div class="informacao-videos-sugeridos">
                     <h2>Um título de vídeo grande</h2>
                     <p>Roberto Dias</p>
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="videos-sugeridos">
-                <img src="https://via.placeholder.com/101x71" alt="próximos-videos">
+                <img src="http://placekitten.com/101/71" alt="próximos-videos">
                 <div class="informacao-videos-sugeridos">
                     <h2>Um título de vídeo grande</h2>
                     <p>Roberto Dias</p>
