--- a/leading-page-com-grid/index.html
+++ b/leading-page-com-grid/index.html
@@ -46,7 +46,20 @@
     <section class="hero">
         <h2>We make cool things</h2>
     </section>
-    <section class="about">3</section>
+    <section class="about">
+        <div class="item">
+            <h3>Title</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro, doloribus dicta, molestiae recusandae dignissimos enim quis vitae quos labore a natus delectus sit corporis ab deleniti consequuntur pariatur provident mollitia.</p>
+            <a href="#" class="btn-know-more">Saiba mais</a>
+        </div>
+        <div class="image right"></div>
+        <div class="image left"></div>
+        <div class="item">
+            <h3>Title</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro, doloribus dicta, molestiae recusandae dignissimos enim quis vitae quos labore a natus delectus sit corporis ab deleniti consequuntur pariatur provident mollitia.</p>
+            <a href="#" class="btn-know-more">Saiba mais</a>
+        </div>
+    </section>
     <section class="services">4</section>
     <section class="projects">5</section>
     <footer class="footer">6</footer>
