--- a/leading-page-com-grid/index.html
+++ b/leading-page-com-grid/index.html
@@ -60,8 +60,36 @@
             <a href="#" class="btn-know-more">Saiba mais</a>
         </div>
     </section>
-    <section class="services">4</section>
-    <section class="projects">5</section>
+    <section class="services">
+        <div class="service">
+            <img src="./src/images/bolinha1.png" alt="Bolinha 1">
+            <div class="service-info">
+                <h3>SEO</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi quisquam! Odit possimus repellat recusandae aut nihil maiores, nobis obcaecati rem commodi voluptate, quasi repudiandae sunt. Reiciendis, optio. Maiores, asperiores?</p>
+            </div>
+        </div>
+        <div class="service">
+            <img src="./src/images/bolinha2.png" alt="Bolinha 2">
+            <div class="service-info">
+                <h3>Landing Pages</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, eligendi quisquam! Odit possimus repellat recusandae aut nihil maiores, nobis obcaecati rem commodi voluptate, quasi repudiandae sunt. Reiciendis, optio. Maiores, asperiores?</p>
+            </div>
+        </div>
+    </section>
+    <section class="projects">
+        <div class="project">
+            <a href=""><img src="./src/images/tomatoes.jpg" alt="tomatoes"></a>
+        </div>
+        <div class="project">
+            <a href=""><img src="./src/images/landscape.jpg" alt="landscape"></a>
+        </div>
+        <div class="project">
+            <a href=""><img src="./src/images/plants.jpg" alt="plants"></a>
+        </div>
+        <div class="project">
+            <a href=""><img src="./src/images/flowers.jpg" alt="flowers"></a>
+        </div>
+
     <footer class="footer">6</footer>
 </body>
 </html>
