--- a/leading-page-com-grid/index.html
+++ b/leading-page-com-grid/index.html
@@ -15,6 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/css/font-awesome.css">
 
 </head>
 <body>
@@ -46,7 +47,7 @@
     <section class="hero">
         <h2>We make cool things</h2>
     </section>
-    <section class="about">
+    <section class="about" id="about">
         <div class="item">
             <h3>Title</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro, doloribus dicta, molestiae recusandae dignissimos enim quis vitae quos labore a natus delectus sit corporis ab deleniti consequuntur pariatur provident mollitia.</p>
@@ -60,7 +61,7 @@
             <a href="#" class="btn-know-more">Saiba mais</a>
         </div>
     </section>
-    <section class="services">
+    <section class="services" id="services">
         <div class="service">
             <img src="./src/images/bolinha1.png" alt="Bolinha 1">
             <div class="service-info">
@@ -76,20 +77,51 @@
             </div>
         </div>
     </section>
-    <section class="projects">
+    <section class="projects" id="projects">
         <div class="project">
-            <a href=""><img src="./src/images/tomatoes.jpg" alt="tomatoes"></a>
+            <a href="">
+                <img src="./src/images/tomatoes.jpg" alt="Tomatoes">
+            </a>
         </div>
         <div class="project">
-            <a href=""><img src="./src/images/landscape.jpg" alt="landscape"></a>
+            <a href="">
+                <img src="./src/images/landscape.jpg" alt="Landscape">
+            </a>
         </div>
         <div class="project">
-            <a href=""><img src="./src/images/plants.jpg" alt="plants"></a>
+            <a href="">
+                <img src="./src/images/plants.jpg" alt="Plants">
+            </a>
         </div>
         <div class="project">
-            <a href=""><img src="./src/images/flowers.jpg" alt="flowers"></a>
+            <a href="">
+                <img src="./src/images/flowers.jpg" alt="Flowers">
+            </a>
         </div>
-
-    <footer class="footer">6</footer>
+    </section>
+    <footer class="footer" id="contact">
+        <h4>Agência XYZ</h4>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#projects">Projects</a></li>
+            </ul>
+        </nav>
+        <div class="social">
+            <a href="">
+                <i class="fab fa-facebook-square"></i>
+            </a>
+            <a href="">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="">
+                <i class="fab fa-twitter-square"></i>
+            </a>
+            <a href="">
+                <i class="fab fa-pinterest"></i>
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
