--- a/modulo-javascript-intermediario/10-objetos-JS/index.html
+++ b/modulo-javascript-intermediario/10-objetos-JS/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Splice e Slice</title>
+    <title>Objetos no JS</title>
 </head>
 <body>
-    <h1>Splice e Slice</h1>
+    <h1>Objetos no JS</h1>
 
     <script type="text/javascript" src="index.js"></script>
 </body>
